[explorer] Fix an issue where the closing part of the tag would break on two lines (#684)
* [explorer] Fix an issue where the closing part of the tag would break on two lines

* Let's just nowrap CodeBlock.Tag

--- a/packages/app-icon-explorer/src/components/IconDetailsPanel/components/CodeBlock.module.scss
+++ b/packages/app-icon-explorer/src/components/IconDetailsPanel/components/CodeBlock.module.scss
@@ -49,6 +49,7 @@
 
 .syntaxTag {
   color: $color-teal-dark;
+  white-space: nowrap;
 }
 
 .syntaxAttribute {
